# XyvaClaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  RELEASE-v1.1.4.md  RELEASE-v1.1.5.md  RELEASE-v2.0.0.md  SECURITY.md  Seedance-Skill与微信公众号Skill设计方案.md  xyvaclaw-setup-linux.sh  xyvaclaw-setup.sh  造神计划V5-升级方案与视频Skill开发方案.md  造神计划V6-升级方案.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
config-base/: openclaw.json.template
config-base/workspace/skills/python-dataviz/: README.md  SKILL.md  _meta.json  pyproject.toml
config-base/workspace/skills/python-dataviz/.clawhub/: origin.json
config-base/workspace/skills/python-dataviz/examples/: README.md
config-base/workspace/skills/python-dataviz/references/: colors.md  statistical.md
config-base/workspace/skills/python-dataviz/scripts/: bar_chart.py  check.py  distribution.py  heatmap.py  interactive.py  line_chart.py  scatter_plot.py
docs/: API-KEYS-GUIDE.md  CONFIG-UX-PROPOSAL.md  DECISION-PROPOSAL.md  FAQ.md  FEISHU-SETUP.md  FIX-PLAN.md  FULL-AUDIT.md  GITHUB-DISTRIBUTION-TUTORIAL.md  GITHUB-README-BILINGUAL.md  INSTALL-REDESIGN.md  PRODUCT-ARCHITECTURE.md  PRODUCT-ARCHITECTURE_EN.md  PRODUCT-INTRODUCTION.md  PROMOTION-PLAN.md  UPGRADE-PROPOSAL.md  WEBSITE-DISTRIBUTION-TUTORIAL.md
installer/: gateway-proxy.js  restore-config.py  sanitize-for-distribution.py  telemetry-server.js
scripts/: release.sh  xyvaclaw-pack.sh  xyvaclaw-update.sh
setup-wizard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
templates/: .env.template  AGENTS.md.template  SOUL.md.template
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+457 files in other folders)
