[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dataviz"
version = "1.0.0"
description = "Professional data visualization skill for OpenClaw using matplotlib, seaborn, and plotly"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Matthew Gordon", email = "matt@workandthrive.ai"},
]
keywords = [
    "openclaw",
    "visualization",
    "matplotlib",
    "seaborn",
    "plotly",
    "data-viz",
    "charts",
    "graphs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "kaleido>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/matthew-a-gordon/python-dataviz-skill"
Repository = "https://github.com/matthew-a-gordon/python-dataviz-skill"
Issues = "https://github.com/matthew-a-gordon/python-dataviz-skill/issues"
ClawHub = "https://clawhub.com"

[tool.setuptools.packages.find]
include = ["scripts*", "references*"]
